Fixing Hamburger menu / navbar on small screen

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,7 +5,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-  
+    z-index: 1000; /* High z-index to stay above other content */
+
     color: white;
   }
   
@@ -70,23 +71,32 @@
   
   /* Responsive Styles */
   @media (max-width: 768px) {
+
+    .navbar {
+      flex-direction: column;
+      gap: 15px;
+    }
     .navbar-menu {
       display: none;
       flex-direction: column;
-      width: 100%;
-      background-color: #333;
       position: absolute;
+      background-color: #292929;
+      margin: auto;
+      gap: 10px;
       top: 60px;
-      left: 0;
+      z-index: 1000; /* High z-index to stay above other content */
+
     }
   
     .navbar-menu li {
       margin: 10px 0;
       text-align: center;
+      width: 100px;
     }
   
     .hamburger {
       display: flex;
+     
    
     }
   
